# famicon_emulator

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: apu.rs  apu_for_launchpad.rs  bus.rs  cartridge.rs  cpu.rs  frame.rs  joypad.rs  launchpad.rs  main.rs  main2.rs  mapper.rs  opscodes.rs  palette.rs  ppu.rs  render.rs  rom.rs  sound_test.rs  types.rs
src/apu/: dmc.rs  launchpad.rs
tools/: package-lock.json  package.json  scrape_opscodes.js
