[package]
name = "famicon_emulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.1.0"
env_logger = "0.10.0"
lazy_static = "1.4.0"
log = "0.4.18"
rand = "0.8.5"
sdl2 = "0.35.2"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "sound_test"
path = "src/sound_test.rs"
